Fixed container alignments

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,29 @@ body {
     color:#5C411A
 }
 
+/*---------------GENERAL CONTAINERS---------------*/
+
+.container-about, .container-volunteers, .container-clarify {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    max-width: 100%;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    margin-bottom: 120px;
+}
+
+.push-down {
+    transform: translateY(20%);
+}
+
 /*---------------NAVBAR---------------*/
 
 nav a img {
@@ -183,33 +206,6 @@ h1 span {
 
 }
 
-/*---------------GENERAL CONTAINER---------------*/
-
-
-.container-about, .container-volunteers, .container-clarify {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    max-width: 100%;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    margin-bottom: 120px;
-}
-
-.push-down {
-    transform: translateY(20%);
-}
-
 /*---------------ABOUT---------------*/
 
 .about-img {
@@ -356,7 +352,7 @@ h2 {
 }
 
 #carouselExampleCaptions p span {
-    color: #f1b604;
+    color: #F1B604;
 }
 
 .carousel-caption {
@@ -366,7 +362,6 @@ h2 {
 }
 
 .carousel-control-next-icon, .carousel-control-prev-icon {
-    display: inline-block;
     width: 30px;
     height: 30px;
 }
@@ -466,7 +461,7 @@ footer {
     z-index: 1;
 }
 
-.social-media li{
+.social-media li {
     list-style-type: none;
     display: inline-block;
     font-size: 28px;
@@ -605,7 +600,6 @@ h1 {
     .about-img  img{
         width: 100%;
     }
-
 
     .navbar-brand {
         margin-right: 0;
